# serializer version: 1
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_24_hour_tamper-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Powered by UniFi Protect Server',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'safety',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alarm Hub 24 Hour Tamper',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.alarm_hub_24_hour_tamper',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_24_hour_tamper]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.alarm_hub_24_hour_tamper',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '24 Hour Tamper',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': '24 Hour Tamper',
    'platform': 'unifiprotect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AABBCCDDEEFF_input_16',
    'unit_of_measurement': None,
  })
# ---
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Powered by UniFi Protect Server',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'battery',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alarm Hub Battery',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.alarm_hub_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_battery]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.alarm_hub_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'unifiprotect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_hub_battery',
    'unique_id': 'AABBCCDDEEFF_battery',
    'unit_of_measurement': None,
  })
# ---
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_hallway-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Powered by UniFi Protect Server',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'motion',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alarm Hub Hallway',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.alarm_hub_hallway',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_hallway]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.alarm_hub_hallway',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hallway',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOTION: 'motion'>,
    'original_icon': None,
    'original_name': 'Hallway',
    'platform': 'unifiprotect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AABBCCDDEEFF_input_24',
    'unit_of_measurement': None,
  })
# ---
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_kitchen_smoke-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Powered by UniFi Protect Server',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'smoke',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alarm Hub Kitchen Smoke',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.alarm_hub_kitchen_smoke',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_kitchen_smoke]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.alarm_hub_kitchen_smoke',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Kitchen Smoke',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': 'Kitchen Smoke',
    'platform': 'unifiprotect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AABBCCDDEEFF_input_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_living_room_window-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Powered by UniFi Protect Server',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'sound',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alarm Hub Living Room Window',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.alarm_hub_living_room_window',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_living_room_window]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.alarm_hub_living_room_window',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Living Room Window',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SOUND: 'sound'>,
    'original_icon': None,
    'original_name': 'Living Room Window',
    'platform': 'unifiprotect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AABBCCDDEEFF_input_8',
    'unit_of_measurement': None,
  })
# ---
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_tamper-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Powered by UniFi Protect Server',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'tamper',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alarm Hub Tamper',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.alarm_hub_tamper',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_tamper]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.alarm_hub_tamper',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Tamper',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.TAMPER: 'tamper'>,
    'original_icon': None,
    'original_name': 'Tamper',
    'platform': 'unifiprotect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_hub_tamper',
    'unique_id': 'AABBCCDDEEFF_tamper',
    'unit_of_measurement': None,
  })
# ---
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_zone_25-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Powered by UniFi Protect Server',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'opening',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alarm Hub Zone 25',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.alarm_hub_zone_25',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_alarm_hub_device_and_entities[binary_sensor.alarm_hub_zone_25]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.alarm_hub_zone_25',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 25',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.OPENING: 'opening'>,
    'original_icon': None,
    'original_name': 'Zone 25',
    'platform': 'unifiprotect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AABBCCDDEEFF_input_25',
    'unit_of_measurement': None,
  })
# ---
# name: test_alarm_hub_device_and_entities[device]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        'aa:bb:cc:dd:ee:ff',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'unifiprotect',
        'AABBCCDDEEFF',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Ubiquiti',
    'model': 'Alarm Hub',
    'model_id': None,
    'name': 'Alarm Hub',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': <ANY>,
  })
# ---
# name: test_alarm_hub_device_and_entities[sensor.alarm_hub_battery_voltage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Powered by UniFi Protect Server',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alarm Hub Battery voltage',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.alarm_hub_battery_voltage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12.108427',
  })
# ---
# name: test_alarm_hub_device_and_entities[sensor.alarm_hub_battery_voltage]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.alarm_hub_battery_voltage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery voltage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLTAGE: 'voltage'>,
    'original_icon': None,
    'original_name': 'Battery voltage',
    'platform': 'unifiprotect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_hub_battery_voltage',
    'unique_id': 'AABBCCDDEEFF_battery_voltage',
    'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
  })
# ---
# name: test_alarm_hub_device_and_entities[sensor.alarm_hub_last_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Powered by UniFi Protect Server',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Alarm Hub Last event',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.alarm_hub_last_event',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-06-02T15:58:03+00:00',
  })
# ---
# name: test_alarm_hub_device_and_entities[sensor.alarm_hub_last_event]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.alarm_hub_last_event',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last event',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last event',
    'platform': 'unifiprotect',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_hub_last_event',
    'unique_id': 'AABBCCDDEEFF_last_event',
    'unit_of_measurement': None,
  })
# ---
